<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <DUT Name="ST_LCP2_Base" Id="{e641e6bd-ab3f-4ffa-ae62-4ea237e1056c}">
    <Declaration><![CDATA[TYPE ST_LCP2_Base :
STRUCT
	Segment	: ARRAY [4..6] OF ST_Segment_Base;
		
	Segment1to3_ShortContactClose	: BOOL;
	Segment1to3_UnShortContactClose	: BOOL;
	Segment4to6_ShortContactClose	: BOOL;
	Segment4to6_UnShortContactClose	: BOOL;
	LossInterlockPressure			: BOOL;
	PSU1OK							: BOOL;
	
	Fire			: BOOL;
	SegmentCharged	: BOOL;
	TriggerScope	: BOOL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>