<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <GVL Name="Input" Id="{4c9dfc78-dde0-47bb-a8fe-9d550e4bab0d}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
//***MCP************************************************************************
	//EL1008 - DI1
	R1_01_00 AT	%I*: BOOL; //Master stop PB not pressed - black pb on mcp
	R1_01_01 AT	%I*: BOOL; //case Estop circuit okay (Rly1 (120vac)
	R1_01_02 AT %I*: BOOL; //MCP PSU1 DC OK
	R1_01_03 AT %I*: BOOL; //
	R1_01_04 AT %I*: BOOL; //
	R1_01_05 AT %I*: BOOL; //spare
	R1_01_06 AT %I*: BOOL; //spare
	R1_01_07 AT %I*: BOOL; //spare

	//EL1008 - DI2
	R1_02_00 AT	%I*: BOOL; 
	R1_02_01 AT	%I*: BOOL;
	R1_02_02 AT %I*: BOOL; 
	R1_02_03 AT %I*: BOOL; 
	R1_02_04 AT %I*: BOOL; 
	R1_02_05 AT %I*: BOOL; 
	R1_02_06 AT %I*: BOOL; 
	R1_02_07 AT %I*: BOOL;  
	
	//EL1008 - DI3
	R1_03_00 AT	%I*: BOOL;  
	R1_03_01 AT	%I*: BOOL;
	R1_03_02 AT %I*: BOOL; 
	R1_03_03 AT %I*: BOOL; 
	R1_03_04 AT %I*: BOOL; 
	R1_03_05 AT %I*: BOOL; 
	R1_03_06 AT %I*: BOOL; 
	R1_03_07 AT %I*: BOOL;  
	
	//EL1008 - DI4
	R1_04_00 AT	%I*: BOOL;  
	R1_04_01 AT	%I*: BOOL;
	R1_04_02 AT %I*: BOOL; 
	R1_04_03 AT %I*: BOOL; 
	R1_04_04 AT %I*: BOOL; 
	R1_04_05 AT %I*: BOOL; 
	R1_04_06 AT %I*: BOOL; 
	R1_04_07 AT %I*: BOOL; 
	
	//EL1008 - DI5
	R1_05_00 AT	%I*: BOOL;  
	R1_05_01 AT	%I*: BOOL;
	R1_05_02 AT %I*: BOOL; 
	R1_05_03 AT %I*: BOOL; 
	R1_05_04 AT %I*: BOOL; 
	R1_05_05 AT %I*: BOOL; 
	R1_05_06 AT %I*: BOOL; 
	R1_05_07 AT %I*: BOOL;
	
	//EL3068 - AI1
	R1_08_00 		AT %I*: INT;
	R1_08_00_Status AT %I*: WORD;
	
	R1_08_01 		AT %I*: INT;
	R1_08_01_Status AT %I*: WORD;

	R1_08_02 		AT %I*: INT;
	R1_08_02_Status AT %I*: WORD;

	R1_08_03 		AT %I*: INT;
	R1_08_03_Status AT %I*: WORD;

	R1_08_04 		AT %I*: INT;
	R1_08_04_Status AT %I*: WORD;

	R1_08_05 		AT %I*: INT;
	R1_08_05_Status AT %I*: WORD;

	R1_08_06 		AT %I*: INT;
	R1_08_06_Status AT %I*: WORD;

	R1_08_07 		AT %I*: INT;
	R1_08_07_Status AT %I*: WORD;

//RACK 2
	//EL3068 - AI1
	R2_01_00 		AT %I*: INT;
	R2_01_00_Status AT %I*: WORD;

	R2_01_01 		AT %I*: INT;
	R2_01_01_Status AT %I*: WORD;

	R2_01_02 		AT %I*: INT;
	R2_01_02_Status AT %I*: WORD;

	R2_01_03 		AT %I*: INT;
	R2_01_03_Status AT %I*: WORD;

	R2_01_04 		AT %I*: INT;
	R2_01_04_Status AT %I*: WORD;

	R2_01_05 		AT %I*: INT;
	R2_01_05_Status AT %I*: WORD;

	R2_01_06 		AT %I*: INT;
	R2_01_06_Status AT %I*: WORD;

	R2_01_07 		AT %I*: INT;
	R2_01_07_Status AT %I*: WORD;

	//EL3068 - AI2
	R2_02_00 		AT %I*: INT;
	R2_02_00_Status AT %I*: WORD;

	R2_02_01 		AT %I*: INT;
	R2_02_01_Status AT %I*: WORD;

	R2_02_02 		AT %I*: INT;
	R2_02_02_Status AT %I*: WORD;

	R2_02_03 		AT %I*: INT;
	R2_02_03_Status AT %I*: WORD;

	R2_02_04 		AT %I*: INT;
	R2_02_04_Status AT %I*: WORD;

	R2_02_05 		AT %I*: INT;
	R2_02_05_Status AT %I*: WORD;

	R2_02_06 		AT %I*: INT;
	R2_02_06_Status AT %I*: WORD;

	R2_02_07 		AT %I*: INT;
	R2_02_07_Status AT %I*: WORD;

	//EL1008 - DI1
	R2_03_00 AT	%I*: BOOL;  
	R2_03_01 AT	%I*: BOOL;
	R2_03_02 AT %I*: BOOL; 
	R2_03_03 AT %I*: BOOL; 
	R2_03_04 AT %I*: BOOL; 
	R2_03_05 AT %I*: BOOL; 
	R2_03_06 AT %I*: BOOL; 
	R2_03_07 AT %I*: BOOL;  

	//EL1008 - DI2
	R2_04_00 AT	%I*: BOOL;  
	R2_04_01 AT	%I*: BOOL;
	R2_04_02 AT %I*: BOOL; 
	R2_04_03 AT %I*: BOOL; 
	R2_04_04 AT %I*: BOOL; 
	R2_04_05 AT %I*: BOOL; 
	R2_04_06 AT %I*: BOOL; 
	R2_04_07 AT %I*: BOOL;  

	//EL1008 - DI3
	R2_05_00 AT	%I*: BOOL;  
	R2_05_01 AT	%I*: BOOL;
	R2_05_02 AT %I*: BOOL; 
	R2_05_03 AT %I*: BOOL; 
	R2_05_04 AT %I*: BOOL; 
	R2_05_05 AT %I*: BOOL; 
	R2_05_06 AT %I*: BOOL; 
	R2_05_07 AT %I*: BOOL;  

//Rack 3	
	//EL3068 - AI1
	R3_01_00 		AT %I*: INT;
	R3_01_00_Status AT %I*: WORD;

	R3_01_01 		AT %I*: INT;
	R3_01_01_Status AT %I*: WORD;

	R3_01_02 		AT %I*: INT;
	R3_01_02_Status AT %I*: WORD;

	R3_01_03 		AT %I*: INT;
	R3_01_03_Status AT %I*: WORD;

	R3_01_04 		AT %I*: INT;
	R3_01_04_Status AT %I*: WORD;

	R3_01_05 		AT %I*: INT;
	R3_01_05_Status AT %I*: WORD;

	R3_01_06 		AT %I*: INT;
	R3_01_06_Status AT %I*: WORD;

	R3_01_07 		AT %I*: INT;
	R3_01_07_Status AT %I*: WORD;

	//EL3068 - AI2
	R3_02_00 		AT %I*: INT;
	R3_02_00_Status AT %I*: WORD;

	R3_02_01 		AT %I*: INT;
	R3_02_01_Status AT %I*: WORD;

	R3_02_02 		AT %I*: INT;
	R3_02_02_Status AT %I*: WORD;

	R3_02_03 		AT %I*: INT;
	R3_02_03_Status AT %I*: WORD;

	R3_02_04 		AT %I*: INT;
	R3_02_04_Status AT %I*: WORD;

	R3_02_05 		AT %I*: INT;
	R3_02_05_Status AT %I*: WORD;

	R3_02_06 		AT %I*: INT;
	R3_02_06_Status AT %I*: WORD;

	R3_02_07 		AT %I*: INT;
	R3_02_07_Status AT %I*: WORD;

	//EL1008 - DI1
	R3_03_00 AT	%I*: BOOL;  
	R3_03_01 AT	%I*: BOOL;
	R3_03_02 AT %I*: BOOL; 
	R3_03_03 AT %I*: BOOL; 
	R3_03_04 AT %I*: BOOL; 
	R3_03_05 AT %I*: BOOL; 
	R3_03_06 AT %I*: BOOL; 
	R3_03_07 AT %I*: BOOL;  

	//EL1008 - DI2
	R3_04_00 AT	%I*: BOOL;  
	R3_04_01 AT	%I*: BOOL;
	R3_04_02 AT %I*: BOOL; 
	R3_04_03 AT %I*: BOOL; 
	R3_04_04 AT %I*: BOOL; 
	R3_04_05 AT %I*: BOOL; 
	R3_04_06 AT %I*: BOOL; 
	R3_04_07 AT %I*: BOOL;  

	//EL1008 - DI3
	R3_05_00 AT	%I*: BOOL;  
	R3_05_01 AT	%I*: BOOL;
	R3_05_02 AT %I*: BOOL; 
	R3_05_03 AT %I*: BOOL; 
	R3_05_04 AT %I*: BOOL; 
	R3_05_05 AT %I*: BOOL; 
	R3_05_06 AT %I*: BOOL; 
	R3_05_07 AT %I*: BOOL; 
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>